# ChatApp

./: Dockerfile  build.sh  install_gtest.sh
client/: CMakeLists.txt  ClientListHandler.cpp  ClientListHandler.h  ClientServerInteraction.cpp  ClientServerInteraction.h  GUIUpdater.cpp  GUIUpdater.h  JSONHandler.cpp  JSONHandler.h  Message.h  MessageHandler.cpp  MessageHandler.h  NetworkHandler.cpp  NetworkHandler.h  ResponseHandler.cpp  ResponseHandler.h  ServerConnection.cpp  ServerConnection.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
server/: CMakeLists.txt  ChatHistory.cpp  ChatHistory.h  ClientController.cpp  ClientController.h  ClientListHandler.cpp  ClientListHandler.h  ClientState.h  Connection.cpp  Connection.h  GetMessageHandler.cpp  GetMessageHandler.h  HistoryManager.cpp  HistoryManager.h  RequestHandler.cpp  RequestHandler.h  SaveMessageHandler.cpp  SaveMessageHandler.h  main.cpp
server/ChatAppServer/: CMakeLists.txt  ChatHistory.cpp  ChatHistory.h  ClientController.cpp  ClientState.h  Connection.cpp  Connection.h  GetMessageHandler.h  HistoryManager.cpp  RequestHandler.h  SaveMessageHandler.cpp  main.cpp
server/UnitTests/: CMakeLists.txt  tests.cpp
